--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess The Number</title>
+    <title>Guess The Number!</title>
+    <link rel="shortcut icon" href="icons/favicon.ico" />
   </head>
   <body>
-    <h1>Initial Commit</h1>
+    <header>
+      <h1>Guess The Number!</h1>
+      <p class="between">Between(1 and 100)</p>
+      <button class="btn again">Again!</button>
+    </header>
   </body>
 </html>
