--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="check">Check!</button>
       </section>
       <section class="right">
         <div class="displayMessages">
