--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,6 @@
         </p>
       </section>
     </main>
-    <script src=""></script>
+    <script src="script.js"></script>
   </body>
 </html>
