Modal and reward button

--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
       <p class="between">Between(1 and 100)</p>
       <button class="btn again">Again!</button>
       <div class="number" id="secret">?</div>
-      <!-- <button class="modal-button">REWARD!!</button> -->
     </header>
 
-    <!-- <div id="myModal" class="modal">
+    <div id="myModal" class="modal">
       <div class="modal-content">
+        <iframe
+          src="https://giphy.com/embed/Ju7l5y9osyymQ"
+          width="480"
+          height="360"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
       </div>
-    </div> -->
+    </div>
 
     <main>
+      <div class="modal-button" id="show-reward">
+        <button class="reward-button" id="reward">REWARD!!</button>
+      </div>
       <section class="left">
         <input type="number" class="guess" min="1" max="100" />
         <button class="check" id="replay">Check!</button>
@@ -37,7 +46,7 @@
             <p class="colder-message">Colder ❄</p>
           </div>
         </div>
-        <p class="label-score">💯 Score: <span class="score">50</span></p>
+        <p class="label-score">💯 Score: <span class="score">25</span></p>
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
